Fix display headers sizing and margin between navbar and jumbotron on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,6 @@ html {
   font-size: 1rem;
 }
 
-
-
 @include media-breakpoint-up(sm) {
   html {
     font-size: 1.2rem;
@@ -19,5 +17,37 @@ html {
 @include media-breakpoint-up(lg) {
   html {
     font-size: 1.6rem;
+  }
+}
+
+@media (max-width: 575.98px) {
+  /* Manage Display Headers for Mobile Devices */
+  .display-1 {
+    font-size: 3rem;
+    font-weight: 300;
+    line-height: 1;
+  }
+
+  .display-2 {
+    font-size: 2.75rem;
+    font-weight: 300;
+    line-height: 1;
+  }
+
+  .display-3 {
+    font-size: 2.25rem;
+    font-weight: 300;
+    line-height: 1;
+  }
+
+  .display-4 {
+    font-size: 1.75rem;
+    font-weight: 300;
+    line-height: 1;
+  }
+
+  /* Fix space between navbar and jumbotron on mobile */
+  .container-fluid {
+    margin-top: 50px;
   }
 }
